--- a/psjconnect-frontend-react/.gitignore
+++ b/psjconnect-frontend-react/.gitignore
@@ -22,3 +22,63 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+#chagpt:
+# ---> Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+dist/
+build/
+
+# ---> Vite
+.vite/
+.cache/
+*.local
+
+# ---> Environment files
+.env
+.env.*    
+!.env.example
+
+# ---> Logs
+logs
+*.log
+*.log.*
+log/
+debug.log
+
+# ---> macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+.Icon?
+._*
+.Spotlight-V100
+.Trashes
+
+# ---> VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+!.vscode/launch.json
+
+# ---> JetBrains IDEs
+.idea/
+
+# ---> Misc
+*~
+*.swp
+*.swo
+.cache/
+.tmp/
+.temp/
+
+# ---> Local env
+.env.development.local
+.env.test.local
+.env.production.local
